adding video support

--- a/src/issues/01-09-2019.md
+++ b/src/issues/01-09-2019.md
@@ -10,6 +10,10 @@ look like:
   * that one
   * the other one
 
+[a website](https://www.youtube.com/watch?v=qz1bo4d1wto)
+
+[![A Video](../images/gatsby-astronaut.png)](https://www.youtube.com/watch?v=qz1bo4d1wto)
+
 Note that --- not considering the asterisk --- the actual text
 content starts at 4-columns in.
 
